# ocaml-exercises

./: .gitignore  LICENSE  README.md  dune-project  problems.opam
lib/: dune  listops.ml  listops.mli  print_utils.ml
test/: dune  test_listops.ml
